# Medical-Assistant-Chatbot

./: README.md  main.py  pyproject.toml
client/: app.py
client/components/: chatUI.py  history_download.py  upload.py
client/utils/: api.py
frontend/: index.html  script.js  style.css
server/: logger.py  main.py  requirement.txt
server/middlewares/: exception_handlers.py
server/modules/: llm.py  load_vectorstore.py  pdf_handlers.py  query_handlers.py
server/routes/: ask_question.py  upload_pdfs.py
