[project]
name = "medical-assitant-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "google-generativeai>=0.8.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "loguru>=0.7.2",
    "pinecone>=5.3.1,<6.0.0",
    "pydantic>=2.9.0",
    "pypdf>=5.1.0,<6.0.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "langchain-text-splitters>=0.3.0",
]
